# amrnet

./: .cspell.json  .dockerignore  .editorconfig  .env.development  .env.example  .env.test  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .npmrc  .nvmrc  .prettierrc.json  .readthedocs-es.yml  .readthedocs-fr.yml  .readthedocs-pt.yml  .readthedocs.translations.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .yarnrc  CHANGELOG.md  CLEANUP_REPORT.txt  CODE_OF_CODUCT.md  CODE_OF_CONDUCT.md  CODE_REVIEW_STAGING.md  CONTRIBUTING.md  DNA_SPINNER_GUIDE.md  DNA_SPINNER_QUICK_GUIDE.md  FARM_IMPLEMENTATION_PLAN.md  FIXIE_SETUP.md  ORGANISM_OPTIMIZATION_GUIDE.md  README.es.md  README.fr.md  README.md  README.pt-br.md  SECURITY.md  SERVER_RUNNING.md  SPINNER_SWITCHING_EXAMPLES.md  (+23 more)
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: chatbot_handler.py  translator.py  translator_improved.py
.github/workflows/: README.md  chatbot.yml  ci-cd.yml  eslint.yml  professional-translation-sync.yml  translate_app.yml  webpack.yml
amrnet_metadata_processing_notebooks/: PW_Gonno.ipynb
assets/html/: amrnet_architecture_expand.html  amrnet_architecture_macro.html
assets/webscrap/clean/: notes.md
client/: .env.production  .eslintrc.json  craco.config.js  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js
client/locales/: en.json  en.json.backup  es.json  fr.json  pt.json
client/public/: index.html  manifest.json  robots.txt
client/src/: App.css  App.js  constants.js  eslint-fixes-guide.js  i18n.js  idb.ts  registerServiceWorker.js  reportWebVitals.js
client/src/assets/: decoliCiprofloxacin.json  ecoliESBL.json  kpneumoCarbapenem.json  ngonoCiprofloxacin.json  salmonellaCiprofloxacin.json  saureusMRSA.json  shigeCiprofloxacin.json  strepneumoCoTrimoxazole.json  typhiCipNS.json  world-50m.json
client/src/components/: FlagIcons.js  LanguageSwitcher.js
client/src/context/: IndexedDBContext.tsx
client/src/data/: atb_consumption.json  glass_data.js  lincode_shigella_lookup.json
client/src/hooks/: useGraphWorker.js
client/src/locales/: en.json  es.json  fr.json  pt.json
client/src/memjs/: constants.ts  header.ts  memjs.ts  noop-serializer.ts  server.ts  utils.ts
client/src/services/: chunkedDataLoader.js  optimizedDataService.js  progressiveGenotypeLoader.js  smartDataProcessor.js
client/src/stores/: hooks.ts  store.js  store.ts
config/: db.js  db2.js
controllers/: controller_DB.js
deploy/: DEPLOY-GUIDE.md  deploy-app.sh  deploy-dev.sh  deploy-production.sh  migrate-atlas.sh  production-setup.sh  promote-to-production.sh  setup-aws-infrastructure.sh  setup-cloudfront.sh  setup-dev-instance.sh  setup-ec2.sh  setup-s3-cron-backup.sh
docs/: .readthedocs.yaml  AMR_drug_data_model.md  Makefile  PROFESSIONAL_TRANSLATION_IMPLEMENTATION.md  TRANSLATION_PLATFORMS_SUMMARY.md  TRANSLATION_QUICKSTART.md  TRANSLATION_SETUP_GUIDE.md  acknowledgements.rst  api.rst  architecture.rst  codeofconduct.rst  conf.py  conf_es.py  conf_fr.py  conf_pt.py  contributing.rst  crowdin.yml  data.rst  decoli.rst  deployment.rst  ecoli.rst  feature.rst  fill_translations.py  fix_po_formatting.py  fix_split_newlines.py  fix_underlines.py  gui.rst  index.rst  installation.rst  internationalization.rst  license.rst  lokalise.yml  medical-glossary.json  pathogen.rst  performance.rst  professional-translation-services.rst  readthedocs-translation-guide.md  requirements.txt  right.rst  saureus.rst  (+17 more)
docs/Org/: decoli.rst  ecoli.rst  kpneumo.rst  ngono.rst  senterica.rst  sentericaints.rst  shige.rst  styphi.rst  table.rst
docs/_static/: custom.css
docs/_templates/: custom-class-template.rst  layout.html
docs/assets/: custom.css
docs/notInUse/: right.rst  userguide.rst
docs/source/: about.rst  api.rst  architecture.rst  conf.py  contact.rst  database.rst  databases.rst  developing.rst  feature.rst  gettingstart.rst  index.rst  maintenance.rst  right.rst  terms.rst  usage.rst
locales/: es.json  pt.json
middleware/: performanceMonitor.js
models/: combined.js  decoli.js  ecoli.js  kpneumo.js  ngono.js  salmonella.js  saureus.js  senterica.js  sentericaints.js  shigella.js  spneumo.js  strepneumo.js  styphi.js
models/Agg2/: mergekleb.js  mix.js  mixkleb.js  process.js
models/AggregatePipeline/: Combine7.js  DownloadCSV.js  mergekp.js  mergest.js  pw_amr_genes.js  pw_amr_profile.js  pw_amr_snps.js  pw_metadata.js  pw_species-prediction.js  pw_stats.js  pw_typing.js
rd/src/: conf.py
routes/api/: aggregations.js  api.js  apiRegistration.js  comb.js  comb_copy.js  combine_files.js  email.js  filters_functions.js  generateDataAPIsFile.js  generateDataClean.js  generate_file.js  optimized.js  publicApi.js  swagger.js  upload_rawdata.js
scripts/: check-glass-data.js  cleanup.sh  comprehensive-eslint-fix.sh  create-indexes.js  deployment-readiness.js  ecoli-freeze-debugger.js  fix-eslint.sh  fix-markdown-naming.sh  heroku-atlas-optimizer.js  minimal-server.js  monitor-performance.js  optimization-status.json  organism-performance-debugger.js  post-fix-validation.js  pre-commit-checks.sh  progressive-loading-test.js  real-performance-test.js  server-fixed.js  setup-translation-platforms.sh  start-with-db-overrides.sh  status-check.sh  test-optimized-endpoints.js  test-performance.js  test-server.js  test-translation-setup.sh
scripts/amrnet_metadata_processing_notebooks/: PW_Gonno_metadata_processing.ipynb  README.md
scripts/translation-automation/: medical_terminology_validator.py  professional_translation_pipeline.py
services/: services.js
src/: __init__.py
src/components/: Note.js  Tabs.js
tutorial/: PERFORMANCE_OPTIMIZATION_GUIDE.md  codebase_cleanup_report.md  developer_guide.md  development.md  file_optimization_report.md  implementation_summary.md  internationalization_guide.md  optimization_guide.md  organism_optimization_guide.md  performance_benchmark.md  performance_optimizations.md  read_the_docs_translations.md  server_running.md
(+516 files in other folders)
