
[project]
name = "AMRnet"
dynamic = ["version"]
description = "AMRnet dashboard aims to make high-quality, robust and reliable genome-derived AMR surveillance data accessible to a wide audience."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Louise Cerdeira", email = "louise.cerdeira@gmail.com" },
    { name = "Kat Holt", email = "drkatholt@gmail.com" }
]
maintainers = [
   { name = "Louise Cerdeira", email = "louise.cerdeira@gmail.com" },
   { name = "Vandana Sharma", email = "vandanasharma@gmail.comm" }
]
keywords = [
    "AMR",
    "Pathogens",
    "computational biology",
    "Genomic data-driven",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
   "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Intended Audience :: Science/Research"
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy~=2.2",
    "scipy~=1.14",
    "matplotlib~=3.9",
    "shapely~=2.0",
    "cytriangle~=2.0",
    "rich[jupyter]~=14.0",
    "more-itertools~=10.5",
]

[project.urls]
Homepage = "https://www.amrnet.org"
Documentation = "https://amrnet.readthedocs.io"
Repository = "https://github.com/amrnet/amrnet"
Issues = "https://github.com/amrnet/amrnet/issues"
Changelog = "https://github.com/amrnet/amrnet/releases"

[project.optional-dependencies]
numba = [
    "numba>=0.60.0",
]
rhino = [
    "rhino3dm>=8.17.0",
    "rhino-shapley-interop>=0.0.4",
]
dxf = [
    "cad-to-shapely>=0.3.2",
]
pardiso = [
    "pypardiso>=0.4.6; platform_system == 'Windows' or platform_system == 'Linux'"
]

[dependency-groups]
dev = [
    "ipympl==0.9.7",
    "notebook==7.4.1",
    "sphinx-autobuild==2024.10.03",
]
docs = [
    "furo==2024.8.6",
    "sphinx==8.1.3",  # nbsphinx requires sphinx<8.2 for now
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "nbsphinx==0.9.7",
    "nbconvert==7.16.6",
    "sphinx-copybutton==0.5.2",
    "sphinxext-opengraph==0.10.0",
